--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -22,7 +23,7 @@ body {
 .logo {
   display: flex;
   align-items: flex-end;
-  gap: 5px;
+  gap: 0.25rem;
 }
 .logo-circle {
   height: 1rem;
@@ -79,6 +80,8 @@ body {
   background:hsl(0, 0%, 100%);
   box-shadow: 0px 5px 5px 0px rgba(0, 119, 179, 0.1);
   border: none;
+  font-weight: 700;
+  letter-spacing: 0.5%;
 }
 
 .material-symbols-outlined {
@@ -90,12 +93,16 @@ body {
   color: hsl(238, 43%, 23%);
   font-family: Helvetica, sans-serif;
   line-height: 110%;
+  width: 50%;
 }
 
 .flex-headline {
   display: flex;
-  width: 50%;
   flex-direction: column;
+  background-image: url(../images/img1.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 70%;
 }
 
 .flex-headline > * {
@@ -115,16 +122,13 @@ body {
 .headline-description{
   width: 21rem;
 }
-.headline-img {
-  position: absolute;
-  bottom: -5rem;
-  right: 2rem;
-}
+
 
 /* second section */
 .section-background {
   background-color: hsl(324, 82%, 66%, 0.15);
   border-radius: 50px;
+  margin-top: 4rem;
   ;
 }
 
@@ -134,7 +138,7 @@ body {
  color: hsl(238, 43%, 23%);
  line-height: 130%;
  font-weight: 700;
-
+margin: 2rem 3rem;
 }
 .second-section .container {
   display: flex;
@@ -154,3 +158,152 @@ body {
   line-height: 160%}
 
   /* Features */
+  .features-header {
+    margin: 5rem 2rem;
+    text-align: center;
+    line-height: 160%;
+  }
+
+  .section-description {
+    margin-top: 4rem;
+  }
+
+  .section-wrapper-features {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 2rem;
+  }
+
+  .box-one {
+    background-image: url(../images/bcg-search-data.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
+  }
+
+  .box-two {
+    background-image: url(../images/bcg-hours-access.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
+  }
+
+  .box-three {
+    background-image: url(../images/bcg-print-out.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
+  }
+
+  .box-four {
+    background-image: url(../images/bcg-security-code.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
+  }
+
+  .ft-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .feature-content-wrapper > * {
+    margin: 2rem;
+  }
+
+  .feature-content-wrapper {
+    width: 50%;
+    
+  }
+
+  .box-title {
+    font-family: Helvetica, sans-serif;
+    font-size: 1.5rem;
+    color: hsl(238, 43%, 23%);
+  }
+
+  .ft-img {
+    height: 60%;
+  }
+
+  .learn-more {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  /* testimonials */
+  .testimonials-background {
+    background-color: hsl(265, 68%, 65%);
+    border-radius: 50px;
+    padding: 2rem;
+  }
+
+  .testimonials-background > * {
+    margin: 4rem 2rem;
+  }
+  
+  .testimonials-background .section-title {
+    color: hsl(0, 0%, 100%)
+  }
+
+  .person {
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 20px;
+    box-shadow: 0px 19px 0px 0px #8A56DB;
+    height: 18.5rem;
+    display: flex;
+    padding: 3rem;
+    gap: 2rem;
+  }
+  .person-wrapper {
+    display: flex;
+    gap: 2rem;
+  }
+
+  .person-photo {
+    width: 5rem;
+    height: 5rem;
+    background-color: hsl(208, 68%, 65%);
+    border-radius: 50%;
+    background-image: url(./images/person-photo.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .person-name {
+    letter-spacing: 0.5%;
+    font-weight: 700;
+    color: hsl(238, 43%, 23%);
+    line-height: 160%;
+  }
+
+  .person-address {
+    color: hsl(265, 68%, 65%);
+    font-weight: 500;
+    font-size: 0.75rem;
+    letter-spacing: 1%;
+  }
+
+  .person-description {
+    margin-top:1rem;
+    line-height: 180%
+  }
+ .slider-dot {
+  background-color: hsl(0, 0%, 100%);
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+ }
+ .slider-ellipse {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+ }
+
+ .pink {
+  width: 1rem;
+  height: 1rem;
+  background-color: hsl(324, 82%, 66%)
+ }
