--- a/style.css
+++ b/style.css
@@ -4,14 +4,9 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.bold {
-  font-weight: bold;
 }
 
 * {
@@ -209,9 +204,15 @@ margin: 2rem 3rem;
     align-items: center;
     gap: 2rem;
   }
-
+  
   .feature-content-wrapper > * {
     margin: 2rem;
+  }
+  .features {
+    margin-bottom: 5rem;
+  }
+  .box-description {
+    margin-right: 6rem;
   }
 
   .feature-content-wrapper {
