--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ body {
   align-items: center;
 }
 
+.nav-item:first-of-type {
+  font-weight: 700;
+}
+
 .btn {
   width: 11.5rem;
   height: 3.5rem;
@@ -89,6 +93,7 @@ body {
   font-family: Helvetica, sans-serif;
   line-height: 110%;
   width: 50%;
+  font-weight: 700;
 }
 
 .flex-headline {
@@ -233,6 +238,7 @@ margin: 2rem 3rem;
   .learn-more {
     background-color: transparent;
     box-shadow: none;
+    padding: 0;
   }
 
   /* testimonials */
